--- a/refPages/unit1/0007ordfield.html
+++ b/refPages/unit1/0007ordfield.html
@@ -61,7 +61,7 @@
 
         $$ \begin{aligned}
           -\infty \preceq x\preceq \infty
-        $$ \end{aligned}
+        \end{aligned}$$
 
         With these extensions, we define $(F^\ast,\preceq)$ as the <b>extended order of $F$</b>.   <br>
 
