--- a/refPages/unit1/0007ordfield.html
+++ b/refPages/unit1/0007ordfield.html
@@ -63,7 +63,7 @@
           -\infty \preceq x\preceq \infty
         \end{aligned}$$
 
-        With these extensions, we define $(F^\ast,\preceq)$ as the <b>extended order of $F$</b>.   <br>
+        We define $(F^\ast,\preceq)$ as the <b>extended order of $F$</b>.   <br>
 
         We define the <b>unbounded intervals</b>,
 
@@ -203,7 +203,7 @@
       <details>
         <summary>$\sup(bX) = b\sup(X)$.</summary>
 
-        Let $bp\in bX$, and observe that since $p\preceq\sup(X)$ and since $0\prec b$ therefore $bp\prec b\sup(X)$.  This shows that $UB_{bX}\ne \emtpyset$ and $b\sup(X)\in UB_{bX}$.  <br>
+        Let $bp\in bX$, and observe that since $p\preceq\sup(X)$ and since $0\prec b$ therefore $bp\preceq b\sup(X)$.  This shows that $UB_{bX}\ne \emtpyset$ and $b\sup(X)\in UB_{bX}$.  <br>
 
         Now let $\alpha\in UB_{bX}$ and $p\in X$.  Since $bp \preceq \alpha$, and because $0\prec b$, then $p\preceq \alpha/b$.  So $\alpha/b \in UB_X$ and therefore $\sup(X)\preceq \alpha/b$.  <br>
 
