--- a/refPages/unit1/0007ordfield.html
+++ b/refPages/unit1/0007ordfield.html
@@ -258,7 +258,7 @@
 
       By compatbility with addition, $0\preceq -1$.  By compatibility with multiplication therefore, $0\cdot (-1)\preceq (-1)(-1)$.  <br>
 
-      This simplifies to $0\preceq 1$ which, by an earlier theorem on total orders, is inconsistent with $0\prec 1$.  <br>
+      This simplifies to $0\preceq 1$ and therefore by anti-symmetry, implies $0=1$.  But it is an axiom of fields that $0\ne 1$.  <br>
 
       $\Box$
     </details>
