--- a/refPages/unit1/0007ordfield.html
+++ b/refPages/unit1/0007ordfield.html
@@ -119,6 +119,41 @@
     <p>Note that the theorems below all have dual theorems, meaning that anything stated in terms of an upper bound (either a simple upper bound, max, or sup) has a corresponding theorem stated in terms of lower bounds.  <br>
     In general, stating the dual theorem involves toggling upper bounds (maxima, suprema) to lower bounds (minima, infima), and reversing the direction of inequalities.  Therefore it is left to the reader to derive the dual theorems and their proofs.</p>
 
+    <div class="thm">
+      Theorem: <tt>Ord. field simult. comp.</tt> <br>
+
+      If $a\preceq b$ and $c\preceq d$ then $a+b\preceq c+d$.  <br>
+
+      Also if $a,b,c,d$ are all nonnegative and $a\preceq b$ and $c\preceq d$, then $ac\preceq bd$.
+    </div>
+
+    <details>
+      <summaryh>Statement and proof.</summaryh>
+
+      <i>Statement</i>: Let $a,b,c,d\in F$ such that $a\preceq b$ and $c\preceq d$.  Then $a+c\preceq b+d$.  <br>
+      
+      Also if $a,b,c,d\in F^{\succeq 0}$ and still $a\preceq b$ and $c\preceq d$, then $ac\preceq bd$.  <br><br>
+
+      <i>Proof</i>: 
+
+      <details>
+        <summary>$a+c\preceq b+d$.</summary>
+
+        By compatibility with addition, $a+c\preceq b+c$.  Also by compatibility with addition $b+c\preceq b+d$.  <br>
+        By transitivity then $a+c\preceq b+d$.
+      </details>
+
+      <details>
+        <summary>$ac\preceq bd$.</summary>
+
+        Assuming $a,b,c,d\in F^{\succeq 0}$, then $ac\preceq bc$ by compatibility with multiplication.  Also $bc\preceq bd$.  <br>
+
+        Therefore by transitivity $ac\preceq  bd$.
+      </details>
+
+      $\Box$
+    </details>
+
     <div class="thm" id="ordFieldDual">
         Theorem: <tt>Ord. field dual.</tt> <br>
 
