--- a/refPages/unit1/0007ordfield.html
+++ b/refPages/unit1/0007ordfield.html
@@ -281,7 +281,7 @@
     </details>
 
     <div class="thm">
-      Theorem: <tt>Ord. field func. sum sup.</tt>
+      Theorem: <tt>Ord. field func. sum sup.</tt> <br>
 
       $\sup(f+g)\preceq \sup(f)+\sup(g)$
     </div>
@@ -299,7 +299,7 @@
     </details>
 
     <div class="thm">
-      Theorem: <tt>Ord. field strict prec. compat.</tt>
+      Theorem: <tt>Ord. field strict prec. compat.</tt> <br>
 
       Strict precedence is compatible with addition and multiplication.
     </div>
@@ -337,7 +337,7 @@
     </details>
 
     <div class="thm">
-      Theorem: <tt>Ord. field zero prec. one</tt>
+      Theorem: <tt>Ord. field zero prec. one</tt> <br>
 
       $0\prec 1$
     </div>
