--- a/refPages/unit1/0007ordfield.html
+++ b/refPages/unit1/0007ordfield.html
@@ -322,7 +322,7 @@
       </details>
 
       <details>
-        <summary>Compatibility with multiplication.</summary>
+        <summary>Compatibility with multiplication.</summary> <br>
 
         Let $a,b\in F$ and $c\in F^+$.  Assume $a\prec b$.  <br>
 
@@ -343,7 +343,8 @@
     </div>
 
     <details>
-      <summary>Statement and proof.</summary>
+      <summary>Statement and proof.</summary> <br>
+
       <i>Statement</i>: $0\prec 1$. <br><br>
       <i>Proof</i>: Assume for contradiction that $1\preceq 0$.  <br>
 
