--- a/refPages/unit1/0007ordfield.html
+++ b/refPages/unit1/0007ordfield.html
@@ -128,7 +128,7 @@
     </div>
 
     <details>
-      <summaryh>Statement and proof.</summaryh>
+      <summary>Statement and proof.</summary>
 
       <i>Statement</i>: Let $a,b,c,d\in F$ such that $a\preceq b$ and $c\preceq d$.  Then $a+c\preceq b+d$.  <br>
       
