--- a/refPages/unit1/0007ordfield.html
+++ b/refPages/unit1/0007ordfield.html
@@ -355,5 +355,18 @@
       $\Box$
     </details>
 
+    <div class="thm">
+      Theorem: <tt>Ord. field integer powers</tt> <br>
+
+      An ordered field follows familiar ordering relations for integer exponents.
+    </div>
+
+    <details>
+      <summary>Statement and proof.</summary>
+
+      <i>Statement</i>: <br><br>
+
+      <i>Proof</i>: 
+    </details>
   </body>
 </html>
