--- a/refPages/unit1/0007ordfield.html
+++ b/refPages/unit1/0007ordfield.html
@@ -318,7 +318,9 @@
 
         Then $a\preceq b$ and by compatibility of $\preceq$ we have $a+c\preceq b+c$.  <br>
 
-        Assume for contradiction that $a+c=b+c$.  Then $a=b$ which in inconsistent with $a\prec b$.  
+        Assume for contradiction that $a+c=b+c$.  Then $a=b$ which in inconsistent with $a\prec b$.  <br>
+
+        Therefore $a+c\ne b+c$ which now implies $a+c\prec b+c$, which demonstrates compatibility with addition.  
       </details>
 
       <details>
