--- a/refPages/unit1/0007ordfield.html
+++ b/refPages/unit1/0007ordfield.html
@@ -118,7 +118,7 @@
     <div class="def">
       We define the element $\overline n = \overbrace{1+1+\cdots + 1}^n$, for each $n\in \Bbb N$.  Similarly $\overline{-n} = \overbrace{-1-1-\cdots -1}^n$ for each $n\in \Bbb N$.  And $\overline 0 = 0\in F$.  <br>
       For each $m,n\in \Bbb Z$ with $n\ne 0$, we define $\overline{\frac{m}n} = \frac{\overline m}{\overline n}$.  <br>
-      We then define 
+      We then define the <b>field of fractions</b>,
       
       $$Q = \{\overline{\frac m n}: m,n\in \Bbb Z, n\ne 0\}$$
     </div>
@@ -313,6 +313,9 @@
       </details>
 
       $\Box$
+    </details>
+
+
     </details>
 
     <h2>Set Bound Thereoms</h2>
