--- a/refPages/unit1/0007ordfield.html
+++ b/refPages/unit1/0007ordfield.html
@@ -129,7 +129,7 @@
 
     <h2>Number Theorems</h2>
 
-    <div class="thm">
+    <div class="thm" id="ordFieldSimultComp">
       Theorem: <tt>Ord. field simult. comp.</tt> <br>
 
       If $a\preceq b$ and $c\preceq d$ then $a+b\preceq c+d$.  <br>
@@ -163,7 +163,7 @@
       $\Box$
     </details>
 
-    <div class="thm">
+    <div class="thm" id="ordFieldStrictPrecCompat">
       Theorem: <tt>Ord. field strict prec. compat.</tt> <br>
 
       Strict precedence is compatible with addition and multiplication.
@@ -203,7 +203,7 @@
       $\Box$ 
     </details>
 
-    <div class="thm">
+    <div class="thm" id="ordFieldZeroPrecOne">
       Theorem: <tt>Ord. field zero prec. one</tt> <br>
 
       $0\prec 1$
@@ -222,7 +222,7 @@
       $\Box$
     </details>
 
-    <div class="thm">
+    <div class="thm" id="ordFieldProdPosNeg">
       Theorem: <tt>Ord. field prod. pos. neg.</tt> <br>
 
       A product of two positive or two negative numbers is positive.  A product of a positive and negative number is negative.
@@ -244,7 +244,7 @@
       $\Box$
     </details>
 
-    <div class="thm">
+    <div class="thm" id="ordFieldIntegerPowers">
       Theorem: <tt>Ord. field integer powers</tt> <br>
 
       An ordered field follows familiar ordering relations for integer exponents.
@@ -450,7 +450,7 @@
       $\Box$
     </details>
 
-    <div class="thm">
+    <div class="thm" id="ordFieldFuncSumSup">
       Theorem: <tt>Ord. field func. sum sup.</tt> <br>
 
       $\sup(f+g)\preceq \sup(f)+\sup(g)$
