--- a/index.html
+++ b/index.html
@@ -216,10 +216,15 @@
       <li><a href="refPages/unit1/0007ordfield.html">Lesson 7: Ordered Fields</a>
       <ol>
         <li>Notation: $(a,b), (a,b], [a,b), [a,b],\infty, F^\ast, a+X, aX X+Y, XY, X^+, X^-, X^{\preceq 0}, X^{\succeq 0}$</li>
-        <li>Def: Interval, bounded, closed, open, positive, negative, compatible with addition, compatible with multiplication</li>
-        <li>Thm: <tt></tt></li>
-        <li>Thm: <tt></tt> </li>
-        <li>Thm: <tt></tt></li>
+        <li>Def: Interval, bounded, closed, open, positive, negative, compatible with addition, compatible with multiplication, field of fractions</li>
+        <li>Thm: <a href="refPages/unit1/0007ordfield.html#ordFieldSimultComp"></a></li>
+        <li>Thm: <a href="refPages/unit1/0007ordfield.html#ordFieldStrictPrecCompat"></a></li>
+        <li>Thm: <a href="refPages/unit1/0007ordfield.html#ordFieldZeroPrecOne"></a></li>
+        <li>Thm: <a href="refPages/unit1/0007ordfield.html#ordFieldProdPosNeg"></a></li>
+        <li>Thm: <a href="refPages/unit1/0007ordfield.html#ordFieldIntegerPowers"></a></li>
+        <li>Thm: <a href="refPages/unit1/0007ordfield.html#ordFieldDual"></a></li>
+        <li>Thm: <a href="refPages/unit1/0007ordfield.html#ordFieldAlgSup"></a></li>
+        <li>Thm: <a href="refPages/unit1/0007ordfield.html#ordFieldFuncSumSup"></a></li>
       </ol>
       </li>
       
