--- a/index.html
+++ b/index.html
@@ -217,14 +217,14 @@
       <ol>
         <li>Notation: $(a,b), (a,b], [a,b), [a,b],\infty, F^\ast, a+X, aX X+Y, XY, X^+, X^-, X^{\preceq 0}, X^{\succeq 0}$</li>
         <li>Def: Interval, bounded, closed, open, positive, negative, compatible with addition, compatible with multiplication, field of fractions</li>
-        <li>Thm: <a href="refPages/unit1/0007ordfield.html#ordFieldSimultComp"></a></li>
-        <li>Thm: <a href="refPages/unit1/0007ordfield.html#ordFieldStrictPrecCompat"></a></li>
-        <li>Thm: <a href="refPages/unit1/0007ordfield.html#ordFieldZeroPrecOne"></a></li>
-        <li>Thm: <a href="refPages/unit1/0007ordfield.html#ordFieldProdPosNeg"></a></li>
-        <li>Thm: <a href="refPages/unit1/0007ordfield.html#ordFieldIntegerPowers"></a></li>
-        <li>Thm: <a href="refPages/unit1/0007ordfield.html#ordFieldDual"></a></li>
-        <li>Thm: <a href="refPages/unit1/0007ordfield.html#ordFieldAlgSup"></a></li>
-        <li>Thm: <a href="refPages/unit1/0007ordfield.html#ordFieldFuncSumSup"></a></li>
+        <li>Thm: <a href="refPages/unit1/0007ordfield.html#ordFieldSimultComp">Ord. field simult. comp.</a></li>
+        <li>Thm: <a href="refPages/unit1/0007ordfield.html#ordFieldStrictPrecCompat">Ord. field strict prec. compat.</a></li>
+        <li>Thm: <a href="refPages/unit1/0007ordfield.html#ordFieldZeroPrecOne">Ord. field zero prec. one</a></li>
+        <li>Thm: <a href="refPages/unit1/0007ordfield.html#ordFieldProdPosNeg">Ord. field prod. pos. neg.</a></li>
+        <li>Thm: <a href="refPages/unit1/0007ordfield.html#ordFieldIntegerPowers">Ord. field integer powers</a></li>
+        <li>Thm: <a href="refPages/unit1/0007ordfield.html#ordFieldDual">Ord. field dual</a></li>
+        <li>Thm: <a href="refPages/unit1/0007ordfield.html#ordFieldAlgSup">Ord. field alg. sup.</a></li>
+        <li>Thm: <a href="refPages/unit1/0007ordfield.html#ordFieldFuncSumSup">Ord. field func. sum sup.</a></li>
       </ol>
       </li>
       
