--- a/refPages/unit1/0008completeness.html
+++ b/refPages/unit1/0008completeness.html
@@ -98,10 +98,25 @@
 
         <details>
           <summary>$\alpha^n\le x$</summary>
+
+          Suppose for contradiction that $x < \alpha^n$, and define 
+
+          $$S = \max\left\{\frac{\alpha^n - x}{n\binom n k \alpha^k : 0\le k\le n\}, \right} $$
+
+          and 
+
+          $$ \varepsilon = \min\{1, \min(S)\}/2 $$
+
+          Therefore, for any integer $0\le k\le n$, we have $\varepsilon^k < 1$ and $\varepsilon < \frac{\alpha^n-x}{n\binom n k \alpha^k}$.  
+
+          Then by the binomial theorem, and the above, 
+          $$\begin{aligned} 
+            (\alpha-\varepsilon)^n &= \sum_{k=0}^n \binom n k \alpha^k (-\varepsilon)^{n-k}
+          \end{aligned}$$
         </details>
 
         <details>
-          <summary>$\alpha^n\ge x$</summary>
+          <summary>$x\le \alpha^n$</summary>
         </details>
 
         
