--- a/refPages/unit1/0008completeness.html
+++ b/refPages/unit1/0008completeness.html
@@ -93,7 +93,9 @@
         
           Clearly $0\in L$ so it is nonempty.  <br>
   
-          If $1\le x$ then by the integer power comparison theorem, $x^n$ is an upper bound on $L$.  If $0\le x < 1$ then 1 is an upper bound on $L$.  Since $L$ is bounded above in every case, then therefore $\sup(L)=\alpha$ exists.  
+          If $1\le x$ then by the integer power comparison theorem, $x^n$ is an upper bound on $L$.  If $0\le x < 1$ then 1 is an upper bound on $L$.  <br>
+          
+          Since $L$ is bounded above in every case, then therefore $\sup(L)=\alpha$ exists.  
         </details>
 
         <details>
