--- a/refPages/unit1/0008completeness.html
+++ b/refPages/unit1/0008completeness.html
@@ -103,7 +103,7 @@
 
           Suppose for contradiction that $x < \alpha^n$, and define 
 
-          $$S = \max\left\{\frac{\alpha^n - x}{n\binom n k \alpha^k : 0\le k\le n\}, \right\} $$
+          $$ S = \max\left\{\frac{\alpha^n - x}{n\binom n k \alpha^k} : 0\le k\le n\right\} $$
 
           and 
 
