--- a/refPages/unit1/0008completeness.html
+++ b/refPages/unit1/0008completeness.html
@@ -61,12 +61,16 @@
         We denote the field of fractions of $\Bbb R$ by the symbol $\Bbb Q$.  We assume without proof that this is the same as our intuitive concept of the rational numbers.
     </div>
 
-    <div class="thm">
+    <div class="def">
         If $x\in\Bbb R^{\ge 0}$ and $n\in\Bbb N$ then we define <b>the $n$th root of $x$</b> as a number $y$ satisfying 
 
         $$ y^n = x $$
 
-        We denote the unique positive solution by $y=\sqrt[n]x$.
+        We denote the unique positive solution by $y=\sqrt[n]x$ or by $y = x^{1/n}$.
+
+        If $r = p/q\in\Bbb Q$ is a rational number, with $p,q\in\Bbb Z$ and $q\ne 0$, then we define 
+
+        $$x^r = (x^{1/q})^p$$
     </div>
 
     <div class="thm">
@@ -173,9 +177,17 @@
         and 
         $$ (x^p)^q = x^{pq} $$ 
 
-        <i>Proof</i>: If $x$ or $y$ is zero, it follows easily that both $x^py^p$ and $(xy)^p$ are both zero.  <br>
-
+        <i>Proof</i>: We prove this in stages.  To begin, we show that if $m,n\in\Bbb N$ then $x^{1/m}y^{1/m} = (xy)^{1/m}$ and $(x^{1/m})^{1/n} = x^{\frac 1{mn}}$.  <br>
+        Afterward, we extend this to rational exponents.
         
+        <details>
+          <summary>$x^{1/m}y^{1/m} = (xy)^{1/m}$</summary>
+
+          
+
+        </details>
+
+
     </details>
   </body>
 </html>
