--- a/refPages/unit1/0008completeness.html
+++ b/refPages/unit1/0008completeness.html
@@ -140,7 +140,7 @@
 
           Then 
 
-          $$\begin{alinged}
+          $$\begin{aligned}
             (\alpha+\varepsilon)^n &= \sum_{k=0}^n \binom n k \alpha^k\varepsilon^{n-k} \\
             & < \alpha^n + \sum_{k=0}^{n-1} \binom n k \alpha^k\varepsilon \\
             & < \alpha^n + \sum_{k=0}^{n-1} \binom n k \alpha^k\left(\frac{x-\alpha^n}{n\binom n k \alpha^k}\right) \\ 
@@ -181,13 +181,30 @@
         Afterward, we extend this to rational exponents.
         
         <details>
-          <summary>$x^{1/m}y^{1/m} = (xy)^{1/m}$</summary>
+          <summary>$x^{1/m}y^{1/m} = (xy)^{1/m}$.</summary>
 
-          
+          $$ \begin{aligned}
+          (x^{1/m}y^{1/m})^m &= (x^{1/m})^m (y^{1/m})^m \\
+          &= x y
+          \end{aligned} $$
+
+          By uniqueness, therefore $x^{1/m}y^{1/m} = (xy)^{1/m}$.  
 
         </details>
+        <details>
+          <summary>$(x^{1/m})^{1/n} = x^{\frac{1}{mn}}$.</summary>
+          $$ \begin{aligned}
+            ((x^{1/m})^{1/n})^{mn} &= (((x^{1/m})^{1/n})^n)^m \\
+            &= (x^{1/m})^{m} \\
+            &= x
+          \end{aligned}$$
 
+          By uniqueness, therefore $(x^{1/m})^{1/n} = x^{\frac 1 {mn}}$.  
+        </details>
 
+        <details>
+          <summary></summary>
+        </details>
     </details>
   </body>
 </html>
