--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     <a href="https://www.github.com/axiomtutor/acira">A Course in Real Analysis ... in Marimo!</a>.
   </p>
 
-  <h2 id="toc">Unit 1: Real Number Axioms</h2>
+  <h2 id="unit1">Unit 1: Real Number Axioms</h2>
 
   <details>
     <summary>Lessons</summary>
@@ -228,17 +228,28 @@
       </ol>
       </li>
       
-      <li><a href="refPages/unit1/0008completeness.html">Lesson 8: Completeness</a>
+      <li><a href="refPages/unit1/0008completeness.html">Lesson 0008: Completeness</a>
       <ol>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>Notation: $\Bbb R,\Bbb Q,\le,\sqrt[n]x, x^{p/q}$</li>
+        <li>Defs: Completeness (with respect to suprema), complete ordered field, real numbers, roots, rational exponents.</li>
+        <li>Axiom: <a href="refPages/unit1/0008completeness.html#axiomOfR">Real axiom.</a></li>
+        <li>Thm: <a href="refPages/unit1/0008completeness.html#realRootsExist">Real roots exist.</a></li>
+        <li>Thm: <a href="refPages/unit1/0008completeness.html#realPowFracIndepOrd">Real pow. frac. indep. ord.</a></li>
+        <li>Thm: <a href="refPages/unit1/0008completeness.html#realRationalPowLaws">Real rational pow. laws</a></li>
         <li></li>
       </ol>
       </li>
     </ul>
     </details>
+    </ul>
+  </details>
+
+  <h2>Unit 2: Sequences and Series</h2>
+
+  <details>
+    <summary>Lessons</summary>
+    <ul>
+      <li><a href="refPages/unit2/0009seqsLim.html">Lesson 0009: Sequences and Limits</a></li>
     </ul>
   </details>
 
