--- a/refPages/unit2/0009seqsLim.html
+++ b/refPages/unit2/0009seqsLim.html
@@ -55,7 +55,7 @@
 
         If $m,p\in\Bbb N$ and if $m\le p$, then we may restrict $(a_k)_{k=m}$ to the domain $N^{\ge p}$.  We denote this restriction as $(a_k)_{k=p}$, and we call this the <b>$p$th tail of $(a_k)_{k=m}$</b>.  <br>
 
-        If $(i_k)_{k=m} : \Bbb N^{\ge m} \to \Bbb N^{\ge p}$ is a strictly increasing function, and 
+        If $(i_k)_{k=m} : \Bbb N^{\ge p} \to \Bbb N^{\ge m}$ is a strictly increasing function, then the composition $(a_k)_{k=m} \circ (i_k)_{k=p}$ is also a sequence of $X$.  In this case, we write this function as $(a_{i_k})_{k=p}$ and call this a <b>subsequence of $(a_k)_{k=m}$</b>.  
     </div>
   </body>
 </html>
