--- a/index.html
+++ b/index.html
@@ -236,7 +236,6 @@
         <li>Thm: <a href="refPages/unit1/0008completeness.html#realRootsExist">Real roots exist.</a></li>
         <li>Thm: <a href="refPages/unit1/0008completeness.html#realPowFracIndepOrd">Real pow. frac. indep. ord.</a></li>
         <li>Thm: <a href="refPages/unit1/0008completeness.html#realRationalPowLaws">Real rational pow. laws</a></li>
-        <li></li>
       </ol>
       </li>
     </ul>
@@ -250,6 +249,11 @@
     <summary>Lessons</summary>
     <ul>
       <li><a href="refPages/unit2/0009seqsLim.html">Lesson 0009: Sequences and Limits</a></li>
+      <ol>
+        <li>Notation: </li>
+        <li>Defs: </li>
+        <li>Thm:</li>
+      </ol>
     </ul>
   </details>
 
