--- a/refPages/unit1/0008completeness.html
+++ b/refPages/unit1/0008completeness.html
@@ -53,7 +53,7 @@
     </div>
 
 
-    <div class="thm" id="axiomsOfR">
+    <div class="thm" id="axiomOfR">
         The <b>axiom of the real numbers</b> is the following proposition. <br>
 
         There exists a complete ordered field.  We denote the set by $F = \Bbb R$ and its ordering relation by $\le$.  <br>
@@ -73,7 +73,7 @@
         $$x^r = (x^{1/q})^p$$
     </div>
 
-    <div class="thm">
+    <div class="thm" id="realRootsExist">
 
         Theorem: <tt>Real roots exist</tt> <br>
 
@@ -165,7 +165,7 @@
 
     </details>
 
-    <div class="thm">
+    <div class="thm" id="realPowFracIndepOrd">
       Theorem: <tt>Real pow frac. indep. ord.</tt>  <br>
 
       Real numbers to a fractional power are independent of order.
@@ -188,7 +188,7 @@
       $\Box$
     </details>
 
-    <div class="thm">
+    <div class="thm" id="realRationalPowLaws">
         Theorem: <tt>Real rational pow. laws</tt> <br>
 
         Real numbers with rational exponents follow the power laws.
